solve the dropdown collapse navBar

--- a/src/app/componentes/footer/footer.component.scss
+++ b/src/app/componentes/footer/footer.component.scss
@@ -1,7 +1,6 @@
 footer {
     background-color: #f8f8f8;
     color: #555;
-    padding: 20px 0;
   }
   
   footer p {
